crates/libs/frieze/tests/ui/enum_not_supported.rs
use frieze::Schema;

#[derive(Schema)]
enum E {
    A,
    B,
}

fn main() {}
